--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 .App .layout {
   min-height: 100vh;
 }
 .App .header {
   text-align: left;
-  background-color: #a0d911;
+  background-color: #fff100;
   color: #fff;
 }
 .App .header .logo {
@@ -11,10 +13,15 @@
   margin-right: 10px;
 }
 .App .header .projecttitle {
-  /* display: inline-block; */
-  color: #fff;
   margin: 0;
-  line-height: 3.2;
+  color: #ffb500;
+  line-height: 1.2;
+
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-optical-sizing: auto;
+  font-size: 1.85rem;
 }
 .App .header .projecttitle small {
   font-size: 50%;
