--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,14 @@
   max-width: 600px;
   margin: 30px;
 }
+.App .content .display-1 {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-optical-sizing: auto;
+  line-height: 1.5;
+  color: #ffb500;
+}
 .App .footer {
   background-color: #fff;
 }
