--- a/src/components/common/QRCodeTypeSelector/styles.css
+++ b/src/components/common/QRCodeTypeSelector/styles.css
@@ -18,7 +18,7 @@
 }
 
 .qr-type-radio.ant-radio-button-wrapper-checked .qr-type-card {
-  border-color: #fff100;
+  border-color: #392b58;
   box-shadow: 0 0 8px rgba(160, 217, 17, 0.2);
 }
 
